0x02-functions_nested_loops/2-print_alphabet_x10.c:
lphabet_x10.c:18:1: error: expected declaration or statement at end of input
   18 | }
      | ^
